# tuxtape

./: .editorconfig  .envrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  buf.yaml  build.rs
.config/: tuxtape-dashboard-config.toml
.github/: dependency-review-config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  future.md
proto/: tuxtape_server.proto
proto/tuxtape/common/v1/: kernel.proto  vulnerability.proto
proto/tuxtape/kernel_builder/v1/: kernel_builder.proto
proto/tuxtape/patch_builder/v1/: patch_builder.proto
proto/tuxtape/server/database/v1/: database.proto
proto/tuxtape/server/fleet_client/v1/: fleet_client.proto
proto/tuxtape/server/registrar/v1/: registrar.proto
src/dashboard/: README.md  action.rs  app.rs  cli.rs  config.rs  database.rs  errors.rs  logging.rs  main.rs  tui.rs
src/dashboard/tui/: background.rs  components.rs  pages.rs  popups.rs
src/dashboard/tui/pages/: configs.rs  home.rs
src/dashboard/tui/popups/: alert.rs  cve_edit_preview.rs
src/kernel_builder/: main.rs
src/parser/: nist_api_types.rs  parser.rs  rate_limiter.rs
src/server/: build_queue.rs  server.rs
